changed bubble delay

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <img src="img/bubble.png" alt="">
             <img src="img/bubble.png" alt="">
             <img src="img/bubble.png" alt="">
+            <img src="img/bubble.png" alt="">
+            <img src="img/bubble.png" alt="">
         </div>
         <nav class="navbar">
             <div class="logo">
