--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </header>
     <section class="home">
         <div class="background">
-            <h1>Radhe Agro Senter</h1>
+            <h1>Radhe Agro Center</h1>
         </div>
         <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum iure saepe vel excepturi id alias minus <br>incidunt vitae quae dolores! Quasi tempora rem dolores facilis tenetur blanditiis pariatur reprehenderit vel! Lorem ipsum dolor sit amet consectetur ad</p>
     </section>
